# agentic-projects

./: .gitignore  MCP_VECTOR_DB_DESIGN.md  SESSION_HANDOFF.md
Agent/: .gitignore  INDEX.md  QUICKSTART.md
Agent/_archive/: README.md
Agent/_archive/pipelines/: INDEX.md
Agent/_archive/socratic-lab/: .gitignore  docker-compose.yml
Agent/_infra/: .gitignore  README.md  docker-compose.yml  doctor.sh  embed_knowledge.py  mcp_server.py  reindex.sh  requirements.txt
Agent/_infra/hooks/: pre-commit
Agent/_infra/socratic-lab/: Dockerfile  README.md
Agent/_reviews/: agent-system-redesign-20260718.md
Agent/company/: INDEX.md
Agent/company/_template/: CLAUDE.md  INDEX.md
Agent/company/aia/: CLAUDE.md  INDEX.md
Agent/pipelines/playbooks/: design_new_pipeline.md
Agent/roles/: INDEX.md  KNOWLEDGE_CHECKLIST.md
Agent/roles/business/: INDEX.md
Agent/skills/adr/: SKILL.md
Agent/skills/data-contract-review/: SKILL.md
Agent/skills/dpia-assessment/: SKILL.md
Agent/skills/incident-runbook/: SKILL.md
Agent/skills/kb-synth/: SKILL.md
Project/new_company/: CLAUDE.md
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/: Dockerfile  __init__.py  pyproject.toml  registry.py  setup.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/connectors/: __init__.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/dofns/: __init__.py  dlq.py  stream.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/steps/: __init__.py  batch_step.py  streaming_step.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/tests/testcase/: test_config.py  test_connectors.py  test_dofns.py  test_orchestrator.py  test_realtime_steps.py  test_sql_functions.py  test_steps.py  test_streaming_steps.py  test_transforms.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/tests/testcase/mock_data/: sample_mapping.json
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data/processor/dataflow/common/transforms/: coalesce.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/: Dockerfile  config.py  core.py  orchestrator.py  pyproject.toml  registry.py  setup.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/connectors/: __init__.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/steps/: __init__.py  pubsub_bigtable_steps.py  streaming.py  streaming_additions.py  streaming_midterm.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/tests/: unit_test_data_pipeline.sh
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/tests/testcase/: __init__.py  test_config.py  test_orchestrator.py  test_transforms.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/tests/testcase/mock_data/: sample_schema.json
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/transforms/: cdc.py  coalesce.py  mapping.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_bk/processor/dataflow/common/utils/: logging.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_member_tier/member_tier/: Dockerfile  flex-template-spec-member-tiers.json  member_tiers.py  pyproject.toml  test_member_tiers.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_refactor/processor/dataflow/common_v2/: Dockerfile  __init__.py  pyproject.toml  setup.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_refactor/processor/dataflow/common_v2/dofns/: __init__.py  batch.py  stream.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_refactor/processor/dataflow/common_v2/steps/: __init__.py  batch_step.py  streaming_step.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_refactor/processor/dataflow/common_v2/tests/: __init__.py
Project/ntt/the_one/the1-replatform/new_project_data_platform_the1_v4/data_refactor/processor/dataflow/common_v2/tests/testcase/: __init__.py  test_dofns.py  test_steps.py  test_transforms.py
Project/project_sandbox/: session_context_export.md  session_context_export_v2.md  session_context_export_v3.md  session_context_export_v4.md  session_context_export_v5.md  session_context_export_v6.md
Project/project_sandbox/crypto-trading/: .gitignore  README.md  pyproject.toml
Project/project_sandbox/crypto-trading/.claude/: CLAUDE.md
Project/project_sandbox/crypto-trading/config/: engine.yaml
Project/project_sandbox/crypto-trading/doc/: 00-bootstrap-prompts.md  01-chat-transcript.md  02-project-context.md  03-signal-logic-spec.md
Project/project_sandbox/crypto-trading/scripts/: com.sin.crypto-daily.plist  daily_analyze.sh
Project/project_sandbox/crypto-trading/src/crypto_engine/: __init__.py  cli.py  config.py  contract.py  engine.py  interpret.py  journal.py  notify.py  pine.py  render.py
Project/project_sandbox/crypto-trading/src/crypto_engine/backtest/: __init__.py  replay.py  report.py
Project/project_sandbox/crypto-trading/src/crypto_engine/data/: backfill.py  fetch.py  store.py
Project/project_sandbox/crypto-trading/src/crypto_engine/features/: indicators.py  patterns.py  structure.py
Project/project_sandbox/crypto-trading/src/crypto_engine/signals/: confluence.py  decision.py  registry.py
Project/project_sandbox/crypto-trading/tests/: test_backtest.py  test_decision.py  test_engine.py  test_indicators.py  test_interpret.py  test_journal.py  test_notify.py  test_patterns.py  test_pine.py  test_signals.py  test_structure.py
(+862 files in other folders)
