[project]
name = "crypto-engine"
version = "0.1.0"
description = "Crypto trading decision-support engine — deterministic Step 1 (analyze)"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",          # exchange data (Binance public, no keys for OHLCV)
    "duckdb>=1.0",        # query layer over parquet store
    "pyarrow>=16.0",      # parquet store-of-record
    "pandas>=2.2",        # feature computation
    "numpy>=1.26",
    "pydantic>=2.7",      # §6 contract models + config validation
    "pyyaml>=6.0",        # engine.yaml config
    "typer>=0.12",        # CLI: `analyze --symbol BTCUSDT --tf 1h,4h,1d`
    "rich>=13.7",         # pretty CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
crypto-engine = "crypto_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
