[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow_common_v2"
version = "2.0.0"  # Major version bump for refactored architecture
requires-python = ">=3.10"
# TESTED COMPATIBLE SET - Must match Dockerfile versions!
# s3fs → aiobotocore → botocore chain has STRICT version requirements
dependencies = [
    "pyyaml>=6.0",
    "apache-beam[gcp]==2.69.0",  # MUST match Dockerfile SDK version
    "google-cloud-bigquery==3.25.0",
    "google-cloud-bigtable>=2.26.0",
    "google-cloud-pubsub>=2.23.1",
    "pyarrow==14.0.2",
    "numpy>=1.21,<2",  # CRITICAL: pyarrow 14.0.2 requires numpy 1.x
    "pandas>=1.5.0,<2.1.0",
    "fastavro>=1.9.0",
    # S3 dependencies - versions MUST be compatible!
    "fsspec==2024.6.1",
    "aiobotocore==2.13.0",
    "boto3==1.34.106",
    "botocore==1.34.106",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

[tool.setuptools]
# REMOVED: connectors, transforms, utils (no longer needed)
packages = [
    "dataflow_common_v2",
    "dataflow_common_v2.steps",
    "dataflow_common_v2.dofns",
]

[tool.setuptools.package-dir]
dataflow_common_v2 = "."
"dataflow_common_v2.steps" = "steps"
"dataflow_common_v2.dofns" = "dofns"

[tool.pytest.ini_options]
# Filter warnings during test runs
filterwarnings = [
    # Ignore httplib2 deprecation warnings (third-party library)
    "ignore::DeprecationWarning:httplib2.*",
    # Ignore PytestCollectionWarning for apache_beam's TestPipeline
    "ignore:cannot collect test class 'TestPipeline':pytest.PytestCollectionWarning",
]
# Disable collection of apache_beam's TestPipeline class
python_classes = ["Test*", "!TestPipeline"]
